--- a/ReactiveInjection/ReactiveInjection.csproj
+++ b/ReactiveInjection/ReactiveInjection.csproj
@@ -2,22 +2,37 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>11</LangVersion>
         <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
+        
+        <!-- Output will be in the analyzer (not lib) folder -->
+        <IncludeBuildOutput>false</IncludeBuildOutput>
+        <!-- Suppress related NuGet warnings about the above -->
+        <NoWarn>NU5100;NU5128</NoWarn>
+
+        <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
     </PropertyGroup>
-    
+
     <ItemGroup>
-        <PackageReference Include="IsExternalInit" Version="1.0.3">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" PrivateAssets="All" />
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" PrivateAssets="All" />
+        <ProjectReference Include="..\ReactiveInjection.Abstractions\ReactiveInjection.Abstractions.csproj" />
     </ItemGroup>
     
     <ItemGroup>
-      <ProjectReference Include="..\ReactiveInjection.Abstractions\ReactiveInjection.Abstractions.csproj" />
+        <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" PrivateAssets="All" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" PrivateAssets="All"/>
+    </ItemGroup>
+    
+    <ItemGroup>
+        <InternalsVisibleto Include="$(AssemblyName).Tests" />
+        <InternalsVisibleto Include="DynamicProxyGenAssembly2" />
+    </ItemGroup>
+    
+    <ItemGroup>
+        <None Include="$(OutputPath)\$(AssemblyName).dll" 
+              Pack="true"
+              PackagePath="analyzers/dotnet/cs"
+              Visible="false" />
     </ItemGroup>
 </Project>
