--- a/ReactiveInjection.Tests.Generator/ReactiveInjection.Tests.Generator.csproj
+++ b/ReactiveInjection.Tests.Generator/ReactiveInjection.Tests.Generator.csproj
@@ -1,20 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFrameworks>net472;net48;netcoreapp3.1;net5.0;net6.0;net7.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
+        <LangVersion>10</LangVersion>
+        
+        <!-- Suppress framework out of support -->
+        <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
+        <NoWarn>NETSDK1138</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Docker.DotNet" Version="3.125.13" />
-        <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.4.0" />
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
-        <PackageReference Include="Moq" Version="4.18.4" />
-        <PackageReference Include="Verify.SourceGenerators" Version="2.1.0" />
-        <PackageReference Include="Verify.Xunit" Version="19.11.1" />
         <PackageReference Include="xunit" Version="2.4.2" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -24,17 +24,15 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-    </ItemGroup>
+    </ItemGroup>    
 
     <ItemGroup>
-        <ProjectReference Include="..\ReactiveInjection.Abstractions\ReactiveInjection.Abstractions.csproj" />
-        <ProjectReference Include="..\ReactiveInjection\ReactiveInjection.csproj" />
+        <Content Include="..\.dockerignore">
+            <Link>.dockerignore</Link>
+        </Content>
     </ItemGroup>
-
+    
     <ItemGroup>
-      <None Update="GeneratorTests\Source.txt">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
+        <PackageReference Include="ReactiveInjection" Version="0.1.0" />
     </ItemGroup>
-
 </Project>
