--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,3 +1,7 @@
 <Project>
-    
+    <PropertyGroup>
+        <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <LangVersion>latest</LangVersion>
+    </PropertyGroup>
 </Project>
