--- a/ReactiveInjection/ReactiveInjection.csproj
+++ b/ReactiveInjection/ReactiveInjection.csproj
@@ -21,7 +21,7 @@
     
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" PrivateAssets="All" />
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" PrivateAssets="All"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" PrivateAssets="All" />
     </ItemGroup>
     
     <ItemGroup>
@@ -30,9 +30,6 @@
     </ItemGroup>
     
     <ItemGroup>
-        <None Include="$(OutputPath)\$(AssemblyName).dll" 
-              Pack="true"
-              PackagePath="analyzers/dotnet/cs"
-              Visible="false" />
+        <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
     </ItemGroup>
 </Project>
