--- a/ReactiveInjection/ReactiveInjection.csproj
+++ b/ReactiveInjection/ReactiveInjection.csproj
@@ -14,8 +14,13 @@
         <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
     </PropertyGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\ReactiveInjection.Abstractions\ReactiveInjection.Abstractions.csproj" />
+    </ItemGroup>
     
     <ItemGroup>
+        
         <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" PrivateAssets="All" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" PrivateAssets="All" />
     </ItemGroup>
