--- a/ReactiveInjection/ReactiveInjection.csproj
+++ b/ReactiveInjection/ReactiveInjection.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
         <RootNamespace>ReactiveInjection</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="JetBrains.Annotations" Version="2023.3.0" />
+    </ItemGroup>
 </Project>
