--- a/ReactiveInjection.SourceGenerators/ReactiveInjection.SourceGenerators.csproj
+++ b/ReactiveInjection.SourceGenerators/ReactiveInjection.SourceGenerators.csproj
@@ -15,6 +15,7 @@
     </PropertyGroup>
     
     <ItemGroup>
+        <PackageReference Include="JetBrains.Annotations" Version="2023.3.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" PrivateAssets="All" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" PrivateAssets="All" />
     </ItemGroup>
