--- a/ReactiveInjection.Tests/ReactiveInjection.Tests.csproj
+++ b/ReactiveInjection.Tests/ReactiveInjection.Tests.csproj
@@ -16,16 +16,18 @@
         <PackageReference Include="Moq" Version="4.20.70" />
         <PackageReference Include="Shouldly" Version="4.2.1" />
         <PackageReference Include="Verify.SourceGenerators" Version="2.2.0" />
-        <PackageReference Include="Verify.Xunit" Version="23.1.0" />
-        <PackageReference Include="xunit" Version="2.6.6" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.5.6">
+        <PackageReference Include="Verify.Xunit" Version="24.1.0" />
+        <PackageReference Include="xunit" Version="2.8.0" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.8.0">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="coverlet.collector" Version="6.0.0">
+        <PackageReference Include="coverlet.collector" Version="6.0.2">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+
+        <PackageReference Include="StronglyTypedId" Version="1.0.0-beta08" />
     </ItemGroup>
 
     <ItemGroup>
@@ -34,8 +36,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="DependencyInjection\ViewModels.cs">
-            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-        </None>
+      <None Include="ViewModels.cs" CopyToOutputDirectory="Always"/>
     </ItemGroup>
 </Project>
